# flappy_bird_allegro

./: .gitignore  CMakeLists.txt  readme.md
assets/: flapy.pcx
src/: config.h  main.cpp  obiekty.cpp  obiekty.h
